[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "asemd"
dynamic = ["version"]
requires-python = ">=3.8"
description = "CLI for the atomic simulation environment (ASE)."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
maintainers = [
    {name = "Viktor Svahn", email="viktor.svahn@kemi.uu.se"}
]

[project.urls]
repository = "https://github.com/viktorsvahn/asemd"

[project.scripts]
asemd = "asemd.__main__:main"
